--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -55,6 +55,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Left)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Move Backward",Scale=1.000000,Key=Down)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
