--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -53,10 +53,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
-+AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="Move Backward",Scale=1.000000,Key=Down)
++AxisMappings=(AxisName="Turn Right",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Left Track Throttle",Scale=-0.500000,Key=Z)
++AxisMappings=(AxisName="Right Track Throttle",Scale=-0.500000,Key=C)
++AxisMappings=(AxisName="Turn Right",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=Down)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
